[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menus/confirmExitMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menus/GameModeMenu.gd" type="Script" id=2]
[ext_resource path="res://Chatboxes/my_theme.theme" type="Theme" id=3]

[node name="GameModeMenu" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Panel" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -264.0
margin_top = -151.0
margin_right = 264.0
margin_bottom = 151.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -123.0
margin_right = 114.0
margin_bottom = 123.0

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer"]
margin_right = 228.0
margin_bottom = 77.0
text = "

Choose Game Mode:
"
align = 1
valign = 1

[node name="SpeedrunMode" type="Button" parent="Control/Panel/VBoxContainer"]
margin_top = 81.0
margin_right = 228.0
margin_bottom = 104.0
text = "Speedrun Mode"

[node name="BossMode" type="Button" parent="Control/Panel/VBoxContainer"]
margin_top = 108.0
margin_right = 228.0
margin_bottom = 131.0
text = "Regular Boss Only Mode"

[node name="BossMode2" type="Button" parent="Control/Panel/VBoxContainer"]
margin_top = 135.0
margin_right = 228.0
margin_bottom = 158.0
text = "Challenge Boss Only Mode"

[node name="ExitGameButton" type="Button" parent="Control/Panel/VBoxContainer"]
visible = false
margin_top = 135.0
margin_right = 192.0
margin_bottom = 158.0
text = "Exit Game"

[node name="Label2" type="Label" parent="Control/Panel/VBoxContainer"]
margin_top = 162.0
margin_right = 228.0
margin_bottom = 219.0
text = "

"
align = 1
valign = 1

[node name="MainMenuButton" type="Button" parent="Control/Panel/VBoxContainer"]
margin_top = 223.0
margin_right = 228.0
margin_bottom = 246.0
text = "Return to Main Menu"

[node name="confirmExitMenu" parent="." instance=ExtResource( 1 )]
visible = false

[connection signal="pressed" from="Control/Panel/VBoxContainer/SpeedrunMode" to="." method="_on_SpeedrunMode_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/BossMode" to="." method="_on_BossMode_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/BossMode2" to="." method="_on_BossMode2_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/ExitGameButton" to="." method="_on_ExitGameButton_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
